# partial-flips-sort

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
.devcontainer/: devcontainer.json  docker-compose.yml
src/: CMakeLists.txt  main.cpp  partial_flip.cpp  partial_flip.hpp  partial_flip.t.cpp  partial_flips_sort.cpp  partial_flips_sort.f.t.cpp  partial_flips_sort.hpp  partial_flips_sort.t.cpp  sort.cpp
